--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -213,6 +213,8 @@ where the sequence $(\cms_t)$ is eventually dying. As a consequence of the lemma
 
 This applies in particular to the moment when the Sun, in about five billions of years, will have eventually evolved to a red giant and made the Earth an unsuitable place for any form of conscious life. By then, if there isn't yet any extra-terrestrial form of conscious life, the experienced mental state should be $\cms_\vac$, \textit{i.e.} the absence of any mental experience. But this state cannot last forever, as we have just seen. If we call ``extra-terrestrial form of conscious life'' the material substrate of the mental state that would get experienced next, then there will be some with certainty.
 
+\paragraphtitle{Commentaries} Proving such theorems in a book on the foundations of physics could be taken as a provocation, but actually I included them here because they are obvious consequences of the formalism and are independent of the details of the physical interactions. They show clearly enough, I think, both the philosophical potential and the dangers of any well-defined interpretation of Quantum Physics. These theorems are in no way a proof of the reality of life after death or of the existence of UFOs, but they would have good chances to get over-interpreted if they would happen to be vulgarized. Developing well-defined interpretations of Quantum Physics obviously has the potential of addressing philosophical issues which are of interest to the public, and it would be a pity not to investigate them from a naturalistic point of view.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
